--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             </div>
             <div v-if="userInfo">
                 <h2>Информация по задачам {{userInfo.name}}</h2>
+                <div>
+                    <img v-bind:src="userInfo.photo['image_128x128']">
+                </div>
                 <div class="alert alert-info" v-if="userInfo.tasks.length === 0">Не найдено задач</div>
                 <table v-if="userInfo.tasks.length > 0" class="table table-striped">
                     <thead>
@@ -59,6 +62,7 @@
                 <thead class="">
                 <tr>
                     <th v-on:click="sortUsersByAlpha('name')" style="cursor:ns-resize;"><i class="glyphicon glyphicon-sort"></i> Имя</th>
+                    <th v-on:click="sortUsersByAlpha('email')" style="cursor:ns-resize;"><i class="glyphicon glyphicon-sort"></i> Email</th>
                     <th v-on:click="sortUsersBy('duePercent')" style="cursor:ns-resize;"><i class="glyphicon glyphicon-sort"></i> % просроченных</th>
                     <th v-on:click="sortUsersBy('taskCount')" style="cursor:ns-resize;"><i class="glyphicon glyphicon-sort"></i> Кол-во задач</th>
                     <th v-on:click="sortUsersBy('dueTasksCount')" style="cursor:ns-resize;"><i class="glyphicon glyphicon-sort"></i> Кол-во просроченных</th>
@@ -68,6 +72,7 @@
                 <tbody>
                 <tr v-for="user in users">
                     <td>{{user.name}}</td>
+                    <td>{{user.email}}</td>
                     <td>{{user.duePercent}}</td>
                     <td>{{user.tasks.length}}</td>
                     <td>{{user.dueTasksCount}}</td>
